--- a/chat.html
+++ b/chat.html
@@ -23,12 +23,7 @@
         <span id="userNameSpan">User</span>
       </h1>
 
-      <div class="message-container" id="msgs">
-        <div class="date">
-          <i data-lucide="calendar"></i>
-          21 February 2023
-        </div>
-      </div>
+      <div class="message-container" id="msgs"></div>
 
       <form class="send-option">
         <div class="input-wrapper">
