--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/globel.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script type="module" src="./script.js"></script>
     <title>ChatApp</title>
 </head>
 
 <body>
-
     <section>
-        <h1>Welcome to <br>
+        <h1>
+            Welcome to <br>
             <span>The Chat App</span>
         </h1>
 
         <div class="form">
-            <!-- <p>Let's get started...</p>
-            <input type="text" placeholder="Your name" id="nameInput"> -->
-
-            <!-- <button id="startButton">Start</button> -->
             <button id="startButton">Sign in</button>
         </div>
-
     </section>
-
 </body>
-
 </html>
