--- a/chat.html
+++ b/chat.html
@@ -46,6 +46,22 @@
         border-bottom: 1px solid rgba(0, 0, 0, 0.2);
       }
 
+      .channels-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px;
+        color: var(--discord-gray);
+        font-size: 0.9rem;
+        text-transform: uppercase;
+        font-weight: 500;
+      }
+
+      .channels-list {
+        flex: 1;
+        overflow-y: auto;
+      }
+
       .channel-item {
         padding: 8px 16px;
         color: var(--discord-gray);
@@ -53,10 +69,29 @@
         align-items: center;
         gap: 8px;
         cursor: pointer;
+        transition: all 0.2s;
       }
 
       .channel-item:hover {
         background-color: var(--discord-hover);
+        color: var(--discord-light);
+      }
+
+      .channel-item.active {
+        background-color: var(--discord-hover);
+        color: var(--discord-light);
+      }
+
+      #add-channel-btn {
+        padding: 4px;
+        background: transparent;
+        border: none;
+        color: var(--discord-gray);
+        cursor: pointer;
+        border-radius: 4px;
+      }
+
+      #add-channel-btn:hover {
         color: var(--discord-light);
       }
 
@@ -189,76 +224,6 @@
         gap: 8px;
         padding: 8px;
       }
-      /* Add these styles to your existing CSS */
-
-      .channels-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 16px;
-        color: var(--discord-gray);
-        font-size: 0.9rem;
-        text-transform: uppercase;
-        font-weight: 500;
-      }
-
-      .channels-list {
-        flex: 1;
-        overflow-y: auto;
-      }
-
-      .channel-item {
-        padding: 8px 16px;
-        color: var(--discord-gray);
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        cursor: pointer;
-        transition: all 0.2s;
-      }
-
-      .channel-item:hover {
-        background-color: var(--discord-hover);
-        color: var(--discord-light);
-      }
-
-      .channel-item.active {
-        background-color: var(--discord-hover);
-        color: var(--discord-light);
-      }
-
-      #add-channel-btn {
-        padding: 4px;
-        background: transparent;
-        border: none;
-        color: var(--discord-gray);
-        cursor: pointer;
-        border-radius: 4px;
-      }
-
-      #add-channel-btn:hover {
-        color: var(--discord-light);
-      }
-
-      .channel-name {
-        color: var(--discord-light);
-        font-weight: 500;
-      }
-
-      .action-button {
-        background: transparent;
-        border: none;
-        padding: 8px;
-        color: var(--discord-gray);
-        cursor: pointer;
-        border-radius: 4px;
-        transition: all 0.2s;
-      }
-
-      .action-button:hover {
-        background-color: var(--discord-hover);
-        color: var(--discord-light);
-      }
 
       #send-btn [data-lucide="send"] {
         color: var(--discord-blue);
@@ -291,7 +256,7 @@
     </style>
   </head>
   <body>
-    <!-- Update the sidebar section in your HTML -->
+    <!-- Sidebar section -->
     <div class="sidebar">
       <div class="server-header">Discord Server</div>
       <div class="channels-header">
@@ -305,21 +270,12 @@
       </div>
     </div>
 
-    <!-- Update the section header -->
+    <!-- Main section -->
     <section>
       <h1>
         <i data-lucide="hash"></i>
         <span id="greeting">Welcome to </span>
-        <span class="channel-name">general</span>
-        <span id="userNameSpan"></span>
-      </h1>
-      <!-- Rest of the section content remains the same -->
-    </section>
-
-    <section>
-      <h1>
-        <i data-lucide="hash"></i>
-        <span id="greeting">Welcome, </span>
+        <span class="channel-name">general</span>,
         <span id="userNameSpan">User</span>
       </h1>
 
@@ -352,7 +308,7 @@
 
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="index.js"></script>
     <script>
       lucide.createIcons();
     </script>
