--- a/chat.html
+++ b/chat.html
@@ -218,6 +218,11 @@
       #message-input::placeholder {
         color: var(--discord-gray);
       }
+      button {
+        background: transparent;
+        border: none;
+        color: rgb(161, 161, 161);
+      }
 
       .action-buttons {
         display: flex;
